# ACE2025-Prelim-Zygisk-Pro

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  build.ps1  hello.js  hellozygisk.c++  settings.gradle.kts  solve_aim.js
docs/: SDK.txt  复盘笔记_FName解析.md  复盘笔记_偏移量分析_Level_ActorsArray.md  复盘笔记_开荒方法论.md  复盘笔记_架构重构与代码规范.md  复盘笔记_移速.md  复盘笔记_自瞄修复.md
jni/: Android.mk  Application.mk  main.cpp  zygisk.hpp
module/: build.gradle.kts  module.prop
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  game.hpp  hack_thread.cpp  hack_thread.hpp  hacks.cpp  main.cpp  shadowhook_wrapper.hpp  utils.hpp
module/src/main/cpp/.reference/: hacks.cpp  hacks_modular.cpp
module/src/main/cpp/game/: actor_utils.hpp  offsets.hpp
module/src/main/cpp/hacks/: mod_aim.cpp  mod_base.hpp  mod_gunoffset.cpp  mod_projectile.cpp  mod_speed.cpp  registry.hpp
scripts/: diag_esp.js  solve_aim.js  solve_esp.js  solve_projectile.js  solve_projectile_bounce.js  solve_projectile_tune.js  solve_speed.js
